cluster/personal/daybook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: daybook
    app.kubernetes.io/version: 3b82912
  name: daybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: daybook
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: daybook
        app.kubernetes.io/version: 3b82912
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/daybook:3b82912@sha256:934d2f4debd09e36828213c5d01c0057e0b266a7fc9584115df67e717c916b5a
        name: daybook
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /var/lib/daybook
          name: data-volume
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: daybook-data-pvc
      securityContext:
        seccompProfile:
          type: RuntimeDefault
