cluster/personal/daybook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: daybook
    app.kubernetes.io/version: 391e4c9
  name: daybook
spec:
  selector:
    app.kubernetes.io/name: daybook
  ports:
  - name: http
    port: 8080
    targetPort: 8080
